--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "export": "next build && next export",
+    "build-dynamic": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
