--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.32.6"
+  },
+  "devDependencies": {
+    "serve": "^11.3.2"
   }
 }
