--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build-dynamic": "next build",
-    "build": "next build && next export",
+    "build": "next build && next export -o output",
     "start": "next start"
   },
   "dependencies": {
