--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -13,14 +13,19 @@ jobs:
     - uses: actions/checkout@v2
     - uses: azure/login@v1
       with:
-          credentials: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Build and export
+      with:
+          package-manager: npm
+          command: build
 
     - name: Upload to blob storage
       uses: azure/CLI@v1
       with:
         azcliversion: 2.0.72
         inlineScript: |
-            npm run export && az storage blob upload-batch --account-name cirtausawebcontent -d '$web' -s .
+            az storage blob upload-batch --account-name cirtausawebcontent -d '$web' -s output
 
   # Azure logout 
     - name: logout
