--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -15,10 +15,16 @@ jobs:
       with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Build and export
+    - name: Set up Node.js
+      uses: actions/setup-node@v1.2.0
       with:
-          package-manager: npm
-          command: build
+        node-version: '12.x'
+
+    - name: Install dependencies
+      run: npm install --production
+
+    - name: Compile build
+      run: npm run build
 
     - name: Upload to blob storage
       uses: azure/CLI@v1
