--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^4.5.3",
     "next": "10.0.5",
+    "next-images": "^1.7.0",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.32.6"
   },
   "devDependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "serve": "^11.3.2"
   }
 }
