--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^4.5.3",
     "g": "^2.0.1",
-    "next": "10.0.5",
+    "next": "^10.2.3",
     "next-images": "^1.7.0",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
